# about-this-linux

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
src/: config.rs  configurator.rs  main.rs  main_window.rs  system_info.rs  utils.rs
